Properly center video description text Prevents massive overflowing text to the right

--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,7 @@ header, footer {
 }
 
 #zen-video-description {
-    white-space: pre;
+    white-space: pre-line;
 }
 
 #form {
